Fixing vertical overflow

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
     margin: 0 auto;
     border-radius: 20px;
     margin-top: 5rem;
+    overflow: auto;  
 }
 
 .btn-container {
